--- a/Scripts/SI 1.Rmd
+++ b/Scripts/SI 1.Rmd
@@ -52,7 +52,7 @@ The 'medium exposure' sampling period followed directly on from the 'short-expos
 
 # Site Details
 
-Three temperature and relative humidity dataloggers were attached to three randomly selected bait traps per site with a reading taken every hour for the duration of sampling. Data  from dataloggers were used for Paluma between the period midnight 13th March  - 11pm 1st April 2016, and data from Kirrama from between midnight 15th March – 11pm 3rd April 2016, the periods where all sites within each transect possessed full days in the field. Four Kirrama sites (K070, K150, K230, and K310) only had usable data from 18th March for two of the three dataloggers used. Paluma 070m was set up later than all other sites, and thus data presented are from 29th March  - 11th April 2017. Changes in seasonal temperatures are not expected to alter the ranking of sites in relation to abiotic values, making elevation a good surrogate for climate in our analyses (Figures S1.2 and 1.3).
+Three temperature and relative humidity dataloggers were attached to three randomly selected bait traps per site with a reading taken every hour for the duration of sampling. Data  from dataloggers were used for Paluma between the period midnight 13th March  - 11pm 1st April 2016, and data from Kirrama from between midnight 15th March – 11pm 3rd April 2016, the periods where all sites within each transect possessed full days in the field. Four Kirrama sites (K070, K150, K230, and K310) only had usable data from 18th March for two of the three dataloggers used. Paluma 070m was set up later than all other sites, and thus data presented are from 29th March  - 11th April 2017. Changes in seasonal temperatures are not expected to alter the ranking of sites in relation to abiotic values, making elevation a good surrogate for climate in our analyses (Figures S1.2 and S1.3).
 
 ```{r fig.height=3, fig.width=6, echo=FALSE}
    
